Warn user when rebooting in puavo-user-registration, if in desktop session mode.

--- a/parts/user-registration/po/fi/puavo-user-registration.po
+++ b/parts/user-registration/po/fi/puavo-user-registration.po
@@ -280,6 +280,9 @@ msgstr "Olet liittyneenä verkkoon \"%s\", haluatko käyttää tätä verkkoa?"
 msgid "You do not have the required permissions to run this tool."
 msgstr "Sinulla ei ole tarvittavia oikeuksia tämän työkalun ajoon."
 
+msgid "System must be rebooted, press OK when ready!"
+msgstr "Systeemi täytyy uudelleenkäynnistää, paina OK kun olet valmis!"
+
 # in puavo-user-registration.glade
 msgid "First name:"
 msgstr "Etunimi:"
