Check for user permissions to run puavo-laptop-setup.
Slightly change the equivalent translation in puavo-user-registration
as well.

--- a/parts/laptop-setup/po/fi/puavo-laptop-setup.po
+++ b/parts/laptop-setup/po/fi/puavo-laptop-setup.po
@@ -17,6 +17,9 @@ msgstr "pitää olla numero"
 msgid "error saving changes"
 msgstr "virhe tallennuksessa"
 
+msgid "You do not have the required permissions to use this tool."
+msgstr "Sinulla ei ole tarvittavia oikeuksia tämän työkalun käyttöön."
+
 # from puavo-laptop-setup.glade
 msgid "Default operating system at boot"
 msgstr "Oletuksena käynnistettävä järjestelmä"
