--- a/parts/user-registration/po/fi/puavo-user-registration.po
+++ b/parts/user-registration/po/fi/puavo-user-registration.po
@@ -277,8 +277,8 @@ msgstr "Käytä verkkoa \"%s\"?"
 msgid "You are connected to network \"%s\", do you want to use this network?"
 msgstr "Olet liittyneenä verkkoon \"%s\", haluatko käyttää tätä verkkoa?"
 
-msgid "You do not have the required permissions to run this tool."
-msgstr "Sinulla ei ole tarvittavia oikeuksia tämän työkalun ajoon."
+msgid "You do not have the required permissions to use this tool."
+msgstr "Sinulla ei ole tarvittavia oikeuksia tämän työkalun käyttöön."
 
 msgid "System must be rebooted, press OK when ready!"
 msgstr "Systeemi täytyy uudelleenkäynnistää, paina OK kun olet valmis!"
