Add support for "puavo.grub.windows.enabled" to puavo-laptop-setup. The actual puavo-conf parameter does not affect anything yet.

--- a/parts/laptop-setup/po/fi/puavo-laptop-setup.po
+++ b/parts/laptop-setup/po/fi/puavo-laptop-setup.po
@@ -21,11 +21,14 @@ msgid "You do not have the required permissions to use this tool."
 msgstr "Sinulla ei ole tarvittavia oikeuksia tämän työkalun käyttöön."
 
 # from puavo-laptop-setup.glade
+msgid "Start using Windows"
+msgstr "Ota Windows käyttöön"
+
 msgid "Default operating system at boot"
 msgstr "Oletuksena käynnistettävä järjestelmä"
 
 msgid "Show developer mode in boot menu"
-msgstr "Näyttäjä kehittäjätila käynnistysmenussa"
+msgstr "Näytä kehittäjätila käynnistysmenussa"
 
 msgid "Abitti-version"
 msgstr "Abitti-versio"
