Do not allow more than once instance of puavo-laptop-setup running, and set window title.

--- a/parts/laptop-setup/po/fi/puavo-laptop-setup.po
+++ b/parts/laptop-setup/po/fi/puavo-laptop-setup.po
@@ -20,6 +20,12 @@ msgstr "virhe tallennuksessa"
 msgid "You do not have the required permissions to use this tool."
 msgstr "Sinulla ei ole tarvittavia oikeuksia tämän työkalun käyttöön."
 
+msgid "Laptop setup"
+msgstr "Kannettavan asetukset"
+
+msgid "is already running"
+msgstr "on jo käynnissä"
+
 # from puavo-laptop-setup.glade
 msgid "Start using Windows"
 msgstr "Ota Windows käyttöön"
