Provide a warning in puavo-laptop-setup if Windows is enabled in the grub menu.

--- a/parts/laptop-setup/po/fi/puavo-laptop-setup.po
+++ b/parts/laptop-setup/po/fi/puavo-laptop-setup.po
@@ -26,6 +26,12 @@ msgstr "Kannettavan asetukset"
 msgid "is already running"
 msgstr "on jo käynnissä"
 
+msgid "It is now possible to choose Windows from the boot menu when starting up the computer."
+msgstr "Nyt on mahdollista valita Windows valikosta konetta käynnistettäessä."
+
+msgid "Abitti is not updated when running Windows, you have to boot into the current system to update it."
+msgstr "Abittia ei päivitetä Windowsia käytettäessä.  Sinun täytyy käyttää tätä käyttöjärjestelmää, jotta Abitti päivittyisi."
+
 # from puavo-laptop-setup.glade
 msgid "Start using Windows"
 msgstr "Ota Windows käyttöön"
