Add a "banner message" to puavo-pkgs-ui.

--- a/parts/pkg/po/fi/puavo-pkgs-ui.po
+++ b/parts/pkg/po/fi/puavo-pkgs-ui.po
@@ -9,6 +9,16 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgid ""
+"Here you can install software, that are not preinstalled on this"
+" laptop due to licensing restrictions.  By installing the software"
+" you accept its licensing terms.  Installation requires network"
+" connectivity."
+msgstr ""
+"Seuraavasta voit asentaa sovelluksia, jotka eivät lisenssiehtojen vuoksi"
+" ole esiasennettuna kannettavalla.  Asentamalla sovelluksen hyväksyt sen"
+" lisenssiehdot.  Ohjelmistojen asentaminen vaatii verkkoyhteyden."
+
 msgid "Show install/remove log"
 msgstr "Näytä asennus/poisto-loki"
 
