Translate "Privacy Policy" to "Rekisteriseloste".

--- a/parts/user-registration/po/fi/puavo-user-registration.po
+++ b/parts/user-registration/po/fi/puavo-user-registration.po
@@ -341,3 +341,6 @@ msgstr "Yhdistä"
 
 msgid "connecting to %s"
 msgstr "yhdistetään verkkoon %s"
+
+msgid "Privacy Policy"
+msgstr "Rekisteriseloste"
