--- a/parts/user-registration/po/fi/puavo-user-registration.po
+++ b/parts/user-registration/po/fi/puavo-user-registration.po
@@ -281,7 +281,7 @@ msgid "You do not have the required permissions to use this tool."
 msgstr "Sinulla ei ole tarvittavia oikeuksia tämän työkalun käyttöön."
 
 msgid "System must be rebooted, press OK when ready!"
-msgstr "Kannettava täytyy nyt käynnistää uudelleen, paina OK kun olet valmis!"
+msgstr "Tietokoneesi käynnistetään uudelleen. Napsauta OK."
 
 # in puavo-user-registration.glade
 msgid "First name:"
