--- a/parts/ltsp/bootserver/INSTALL
+++ b/parts/ltsp/bootserver/INSTALL
@@ -122,7 +122,7 @@ You may also want to configure something like:
   NETWORK_TIMEOUT 15
   SASL_MECH       GSSAPI
   TIMEOUT         15
-  TLS_CACERT      /etc/puavo/certs/rootca.pem
+  TLS_CACERT      /etc/puavo-conf/rootca.pem
   TLS_REQCERT     demand
   URI             ldap://FILL_IN_YOUR_SERVER_FQDN
 
