--- a/debs/linux/debian/changelog
+++ b/debs/linux/debian/changelog
@@ -1,9 +1,15 @@
-linux (4.9.168-1+deb9u3+puavo1) stretch; urgency=medium
+linux (4.9.168-1+deb9u4+puavo1) stretch; urgency=medium
 
   * Add a patch for enabling/disabling DRRS-feature in "i915"-driver,
     with "i915.enable_drrs=0" or "i915.enable_drrs=1".
 
  -- Puavo Org <dev@opinsys.fi>  Fri, 16 Feb 2018 07:43:58 +0200
+
+linux (4.9.168-1+deb9u4) stretch-security; urgency=high
+
+  * ptrace: Fix ->ptracer_cred handling for PTRACE_TRACEME (CVE-2019-13272)
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 19 Jul 2019 13:41:00 +0200
 
 linux (4.9.168-1+deb9u3) stretch-security; urgency=high
 
