--- a/parts/user-registration/po/fi/puavo-user-registration.po
+++ b/parts/user-registration/po/fi/puavo-user-registration.po
@@ -74,8 +74,8 @@ msgstr ""
 "  Ilman käyttäjätunnusta tiedostosi katoavat, kun työpöytäsessiosi loppuu."
 
 #: puavo-user-registration:212
-msgid "Loginnames may contain only characters a-z, 0-9, - and a dot.\nMust be at least three characters long."
-msgstr "Käyttäjätunnuksiin kelpaavat merkit a-z, 0-9, - ja piste.\nNimen on oltava vähintään kolme merkkiä pitkä."
+msgid "Loginnames may contain only characters a-z, 0-9, - and a dot. It must\nstart with a lowercase letter and it must be at least three characters long."
+msgstr "Käyttäjätunnuksiin kelpaavat merkit a-z, 0-9, - ja piste. Nimen on \nalettava pienellä kirjaimella ja oltava vähintään kolme merkkiä pitkä."
 
 #: puavo-user-registration:327 puavo-user-registration:381
 #: puavo-user-registration:407 puavo-user-registration:431
