--- a/parts/laptop-setup/po/fi/puavo-laptop-setup.po
+++ b/parts/laptop-setup/po/fi/puavo-laptop-setup.po
@@ -30,7 +30,7 @@ msgid "It is now possible to choose Windows from the boot menu when starting up 
 msgstr "Windows on nyt lisätty käynnistysvaihtoehdoksi tietokoneen käynnistysvalikkoon. Käynnistysvalikko tulee näkyviin aina tietokoneen uudelleen käynnistyksen yhteydessä."
 
 msgid "Abitti is not updated when running Windows, you have to boot into the current system to update it."
-msgstr "Huomioi, että Abitti-koejärjestelmää ei päivitetä silloin, kun tietokone on käynnistetty Windowsiin. Vaihtaaksesi/päivittääksesi kannettavan Abitti-versiota, sinun tulee valita tietokoneen käynnistyksen yhteydessä 'Normaali käynnistys' ja käynnistää tähän nyt käytössä olevaan Opinsys OS -käyttöjärjestelmään."
+msgstr "Huomioi, että Abitti-yhteensopivaa koejärjestelmää ei päivitetä silloin, kun tietokone on käynnistetty Windowsiin. Vaihtaaksesi/päivittääksesi kannettavan koejärjestelmäversiota, sinun tulee valita tietokoneen käynnistyksen yhteydessä 'Normaali käynnistys' ja käynnistää tähän nyt käytössä olevaan Opinsys OS -käyttöjärjestelmään."
 
 # from puavo-laptop-setup.glade
 msgid "Start using Windows"
@@ -43,7 +43,7 @@ msgid "Show developer mode in boot menu"
 msgstr "Näytä kehittäjätila tietokonetta käynnistettäessä"
 
 msgid "Abitti-version"
-msgstr "Abitti-versio"
+msgstr "Koejärjestelmäversio (Abittia vastaava)"
 
 msgid "latest version"
 msgstr "viimeisin versio"
