Add some level of support for extra content localizations for puavo-desktop-applet.

--- a/parts/desktop-applet/po/fi/puavo-desktop-applet.po
+++ b/parts/desktop-applet/po/fi/puavo-desktop-applet.po
@@ -138,8 +138,8 @@ msgstr " onnistui."
 msgid " has failed:"
 msgstr " epäonnistui:"
 
-msgid " version"
-msgstr "-versio"
+msgid "eExam-system (Abitti-compatible)"
+msgstr "Koejärjestelmä (Abitti-yhteensopiva)"
 
 msgid "is updating"
 msgstr "on päivittymässä"
