--- a/debs/openwsman/debian/changelog
+++ b/debs/openwsman/debian/changelog
@@ -1,3 +1,9 @@
+openwsman (2.6.9-0+puavo1) buster; urgency=medium
+
+  * Update to 2.6.9.
+
+ -- Puavo Org <dev@opinsys.fi>  Wed, 21 Aug 2019 08:57:37 +0300
+
 openwsman (2.6.5-0ubuntu3) bionic; urgency=medium
 
   * debian/control: breaks/replaces for libwsman-client2.
