Remove obsolete documentation, we no longer use load balancing between LTSP servers (we do not use LTSP servers at all).

--- a/parts/ltsp/bootserver/INSTALL
+++ b/parts/ltsp/bootserver/INSTALL
@@ -130,23 +130,19 @@ to /etc/ldap/ldap.conf for ldapsearch and other ldap-tools to work,
 but this should not be strictly necessary.
 
 
-Load balancing and laptop updates
----------------------------------
+Laptop updates
+--------------
 
-Load balancing between LTSP servers requires nginx configuration.
-Nginx is also used for distributing ltsp image binary patches
-to laptops for updating laptops.  Load balancing is not strictly
-required, but this may actually change soon, so it is a good idea
-to enable it.  Laptop updates are only useful if you have puavo-laptops
-installed.
+Nginx is used for distributing puavo image binary patches to laptops
+for updating laptops.
 
-  # enable puavo-rest / load balancing:
+  # enable puavo-rest
   sudo ln -fns /etc/nginx/sites-available/puavo-rest \
                /etc/nginx/sites-enabled/puavo-rest
 
-  # enable ltsp-image / binary patch distribution (for laptops only)
-  sudo ln -fns /etc/nginx/sites-available/ltsp-images \
-               /etc/nginx/sites-enabled/ltsp-images
+  # enable puavo-image / binary patch distribution (for laptops only)
+  sudo ln -fns /etc/nginx/sites-available/puavo-images \
+               /etc/nginx/sites-enabled/puavo-images
 
   # make changes effective
   sudo service nginx reload
