--- a/debs/incron/debian/changelog
+++ b/debs/incron/debian/changelog
@@ -1,3 +1,9 @@
+incron (0.5.12-1+puavo1) buster; urgency=medium
+
+  * Patch with https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=930526#5
+
+ -- Puavo Org <dev@opinsys.fi>  Sat, 12 Oct 2019 11:40:23 +0300
+
 incron (0.5.12-1) unstable; urgency=medium
 
   * New upstream release (Closes: #860199)
