--- a/debs/linux/debian/changelog
+++ b/debs/linux/debian/changelog
@@ -1,9 +1,20 @@
-linux (4.9.189-3+puavo1) stretch; urgency=medium
+linux (4.9.189-3+deb9u1+puavo1) stretch; urgency=medium
 
   * Add a patch for enabling/disabling DRRS-feature in "i915"-driver,
     with "i915.enable_drrs=0" or "i915.enable_drrs=1".
 
  -- Puavo Org <dev@opinsys.fi>  Fri, 16 Feb 2018 07:43:58 +0200
+
+linux (4.9.189-3+deb9u1) stretch-security; urgency=high
+
+  * vhost: make sure log_num < in_num (CVE-2019-14835)
+  * ALSA: usb-audio: Fix an OOB bug in parse_audio_mixer_unit (CVE-2019-15117)
+  * ALSA: usb-audio: Fix a stack buffer overflow bug in check_input_term
+    (CVE-2019-15118)
+  * [x86] ptrace: fix up botched merge of spectrev1 fix (CVE-2019-15902)
+  * KVM: coalesced_mmio: add bounds checking (CVE-2019-14821)
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 20 Sep 2019 13:03:45 +0200
 
 linux (4.9.189-3) stretch; urgency=medium
 
