Do not autostart anything VirtualBox-related desktop stuff unless we are actually running in VirtualBox.

--- a/rules/README
+++ b/rules/README
@@ -1,6 +1,9 @@
 Short explanations for puppet modules listed here (to know exactly what
 they do, you need to look inside):
 
+autostart
+    /etc/xdg/autostart tweaks.
+
 backgrounds
     Some backgrounds for login screen and desktop.
 
