I do not know how "&lt;" and "&gt;" can go through translations (in glade/python/gettext), thus I am simple removing them.

--- a/parts/user-registration/po/fi/puavo-user-registration.po
+++ b/parts/user-registration/po/fi/puavo-user-registration.po
@@ -414,8 +414,8 @@ msgstr ""
 "Saat sähköpostiisi vahvistuksen rekisteröinnistä."
 "  Osoitetta käytetään myös salasanan nollauksiin."
 
-msgid "&lt; Previous"
-msgstr "&lt; Edellinen"
+msgid "Previous"
+msgstr "Edellinen"
 
 msgid "Create your account!"
 msgstr "Luo tunnus!"
@@ -438,5 +438,5 @@ msgstr "Salasana:"
 msgid "Connect"
 msgstr "Yhdistä"
 
-msgid "Next &gt;"
-msgstr "Seuraava &gt;"
+msgid "Next"
+msgstr "Seuraava"
