Add +puavo1 to all packages patched/built by us.

--- a/debs/mypaint/debian/changelog
+++ b/debs/mypaint/debian/changelog
@@ -1,3 +1,9 @@
+mypaint (1.2.0-4.1+puavo1) buster; urgency=medium
+
+  * Build mypaint for Buster.
+
+ -- Puavo Org <dev@opinsys.fi>  Thu, 14 May 2020 14:19:35 +0300
+
 mypaint (1.2.0-4.1) unstable; urgency=medium
 
   * Non-maintainer upload.
