--- a/debs/pinta/debian/changelog
+++ b/debs/pinta/debian/changelog
@@ -1,3 +1,9 @@
+pinta (1.6-2+puavo1) buster; urgency=medium
+
+  * Build pinta for Buster.
+
+ -- Puavo Org <dev@opinsys.fi>  Wed, 03 Apr 2019 12:11:56 +0300
+
 pinta (1.6-2) unstable; urgency=medium
 
   * [eba4af1] Update TargetFrameworkVersion, ToolsVersion and Mono.Posix
