--- a/debs/sblim-sfcc/debian/changelog
+++ b/debs/sblim-sfcc/debian/changelog
@@ -1,3 +1,9 @@
+sblim-sfcc (2.2.8-0ubuntu2+puavo1) buster; urgency=medium
+
+  * Build sblim-sfcc for Buster.
+
+ -- Puavo Org <dev@opinsys.fi>  Wed, 03 Apr 2019 12:11:56 +0300
+
 sblim-sfcc (2.2.8-0ubuntu2) bionic; urgency=medium
 
   * No-change rebuild against libcurl4
