--- a/debs/wsmancli/debian/changelog
+++ b/debs/wsmancli/debian/changelog
@@ -1,3 +1,9 @@
+wsmancli (2.6.0-0ubuntu1+puavo1) buster; urgency=medium
+
+  * Build wsmancli for Buster.
+
+ -- Puavo Org <dev@opinsys.fi>  Wed, 03 Apr 2019 12:11:56 +0300
+
 wsmancli (2.6.0-0ubuntu1) bionic; urgency=medium
 
   * New upstream release
