--- a/debs/fmit/debian/changelog
+++ b/debs/fmit/debian/changelog
@@ -1,3 +1,9 @@
+fmit (1.2.6-0.2+puavo1) buster; urgency=medium
+
+  * Build fmit for Buster.
+
+ -- Puavo Org <dev@opinsys.fi>  Thu, 14 May 2020 14:19:35 +0300
+
 fmit (1.2.6-0.2) unstable; urgency=medium
 
   * Non-maintainer upload.
