--- a/debs/libmypaint/debian/changelog
+++ b/debs/libmypaint/debian/changelog
@@ -1,3 +1,9 @@
+libmypaint (1.3.0-2.1+puavo1) buster; urgency=medium
+
+  * Build libmypaint for Buster.
+
+ -- Puavo Org <dev@opinsys.fi>  Thu, 14 May 2020 14:19:35 +0300
+
 libmypaint (1.3.0-2.1) unstable; urgency=medium
 
   * Non-maintainer upload.
