--- a/debs/nbd/debian/changelog
+++ b/debs/nbd/debian/changelog
@@ -1,4 +1,4 @@
-nbd (1:3.19-3+puavo1) unstable; urgency=medium
+nbd (1:3.19-3+puavo1) buster; urgency=medium
 
   * Patched nbd-server for
     https://github.com/NetworkBlockDevice/nbd/issues/96
