Adapt puavo-desktop-applet to puavo-send-monitors-xml changes and add some translations.

--- a/parts/desktop-applet/po/fi/puavo-desktop-applet.po
+++ b/parts/desktop-applet/po/fi/puavo-desktop-applet.po
@@ -143,3 +143,15 @@ msgstr "Koejärjestelmä (Abitti-yhteensopiva)"
 
 msgid "is updating"
 msgstr "on päivittymässä"
+
+msgid "ERROR"
+msgstr "VIRHE"
+
+msgid "Could not send display configuration."
+msgstr "Näyttöasetusten lähetys ei onnistunut."
+
+msgid "Success"
+msgstr "Onnistui"
+
+msgid "Display configuration sent successfully."
+msgstr "Näyttöasetukset lähetetty onnistuneesti."
