Translate "Send display configuration" to Finnish.

--- a/parts/desktop-applet/po/fi/puavo-desktop-applet.po
+++ b/parts/desktop-applet/po/fi/puavo-desktop-applet.po
@@ -144,6 +144,9 @@ msgstr "Koejärjestelmä (Abitti-yhteensopiva)"
 msgid "is updating"
 msgstr "on päivittymässä"
 
+msgid "Send display configuration"
+msgstr "Lähetä näyttöjen asettelu"
+
 msgid "ERROR"
 msgstr "VIRHE"
 
